// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link changes the class when hovered 1`] = `
<section
  className="paging row"
>
  <div
    className="columns small-12"
  >
    <ul
      aria-label="Pagination"
      className="pagination text-center"
      role="navigation"
    >
      <li
        className=""
      >
        <a
          href="category/test/page/1"
          onClick={[Function]}
        >
          1
        </a>
      </li>
      <li
        className=""
      >
        <a
          href="category/test/page/2"
          onClick={[Function]}
        >
          2
        </a>
      </li>
      <li
        className="active"
      >
        <a
          href="category/test/page/3"
          onClick={[Function]}
        >
          3
        </a>
      </li>
      <li
        className=""
      >
        <a
          href="category/test/page/4"
          onClick={[Function]}
        >
          4
        </a>
      </li>
      <li
        className=""
      >
        <a
          href="category/test/page/5"
          onClick={[Function]}
        >
          5
        </a>
      </li>
      <li
        className=""
      >
        <a
          href="category/test/page/6"
          onClick={[Function]}
        >
          6
        </a>
      </li>
      <li
        className=""
      >
        <a
          href="category/test/page/7"
          onClick={[Function]}
        >
          7
        </a>
      </li>
      <li
        className=""
      >
        <a
          href="category/test/page/8"
          onClick={[Function]}
        >
          8
        </a>
      </li>
      <li
        className=""
      >
        <a
          href="category/test/page/9"
          onClick={[Function]}
        >
          9
        </a>
      </li>
      <li
        className=""
      >
        <a
          href="category/test/page/10"
          onClick={[Function]}
        >
          10
        </a>
      </li>
      <li
        className=""
      >
        <a
          href="category/test/page/11"
          onClick={[Function]}
        >
          11
        </a>
      </li>
      <li
        className=""
      >
        <a
          href="category/test/page/12"
          onClick={[Function]}
        >
          12
        </a>
      </li>
      <li
        className=""
      >
        <a
          href="category/test/page/13"
          onClick={[Function]}
        >
          13
        </a>
      </li>
      <li
        className=""
      >
        <a
          href="category/test/page/14"
          onClick={[Function]}
        >
          14
        </a>
      </li>
      <li
        className=""
      >
        <a
          href="category/test/page/15"
          onClick={[Function]}
        >
          15
        </a>
      </li>
      <li
        className=""
      >
        <a
          href="category/test/page/16"
          onClick={[Function]}
        >
          16
        </a>
      </li>
      <li
        className=""
      >
        <a
          href="category/test/page/17"
          onClick={[Function]}
        >
          17
        </a>
      </li>
      <li
        className=""
      >
        <a
          href="category/test/page/18"
          onClick={[Function]}
        >
          18
        </a>
      </li>
      <li
        className=""
      >
        <a
          href="category/test/page/19"
          onClick={[Function]}
        >
          19
        </a>
      </li>
      <li
        className=""
      >
        <a
          href="category/test/page/20"
          onClick={[Function]}
        >
          20
        </a>
      </li>
      <li
        className=""
      >
        <a
          href="category/test/page/21"
          onClick={[Function]}
        >
          21
        </a>
      </li>
      <li
        className=""
      >
        <a
          href="category/test/page/22"
          onClick={[Function]}
        >
          22
        </a>
      </li>
      <li
        className=""
      >
        <a
          href="category/test/page/23"
          onClick={[Function]}
        >
          23
        </a>
      </li>
      <li
        className=""
      >
        <a
          href="category/test/page/24"
          onClick={[Function]}
        >
          24
        </a>
      </li>
      <li
        className=""
      >
        <a
          href="category/test/page/25"
          onClick={[Function]}
        >
          25
        </a>
      </li>
      <li
        className=""
      >
        <a
          href="category/test/page/26"
          onClick={[Function]}
        >
          26
        </a>
      </li>
      <li
        className=""
      >
        <a
          href="category/test/page/27"
          onClick={[Function]}
        >
          27
        </a>
      </li>
      <li
        className=""
      >
        <a
          href="category/test/page/28"
          onClick={[Function]}
        >
          28
        </a>
      </li>
      <li
        className=""
      >
        <a
          href="category/test/page/29"
          onClick={[Function]}
        >
          29
        </a>
      </li>
      <li
        className=""
      >
        <a
          href="category/test/page/30"
          onClick={[Function]}
        >
          30
        </a>
      </li>
      <li
        className=""
      >
        <a
          href="category/test/page/31"
          onClick={[Function]}
        >
          31
        </a>
      </li>
      <li
        className=""
      >
        <a
          href="category/test/page/32"
          onClick={[Function]}
        >
          32
        </a>
      </li>
      <li
        className=""
      >
        <a
          href="category/test/page/33"
          onClick={[Function]}
        >
          33
        </a>
      </li>
      <li
        className=""
      >
        <a
          href="category/test/page/34"
          onClick={[Function]}
        >
          34
        </a>
      </li>
      <li
        className=""
      >
        <a
          href="category/test/page/35"
          onClick={[Function]}
        >
          35
        </a>
      </li>
      <li
        className=""
      >
        <span
          aria-hidden="true"
          className="fa fa-ellipsis-h"
        />
      </li>
      <li
        className=""
      >
        <a
          href="category/test/page/100"
          onClick={[Function]}
        >
          100
        </a>
      </li>
    </ul>
  </div>
</section>
`;

exports[`Link changes the class when hovered 2`] = `
<section
  className="paging row"
>
  <div
    className="columns small-12"
  >
    <ul
      aria-label="Pagination"
      className="pagination text-center"
      role="navigation"
    >
      <li
        className=""
      >
        <a
          href="category/test/page/1"
          onClick={[Function]}
        >
          1
        </a>
      </li>
      <li
        className=""
      >
        <a
          href="category/test/page/2"
          onClick={[Function]}
        >
          2
        </a>
      </li>
      <li
        className=""
      >
        <a
          href="category/test/page/3"
          onClick={[Function]}
        >
          3
        </a>
      </li>
      <li
        className=""
      >
        <a
          href="category/test/page/4"
          onClick={[Function]}
        >
          4
        </a>
      </li>
      <li
        className="active"
      >
        <a
          href="category/test/page/5"
          onClick={[Function]}
        >
          5
        </a>
      </li>
      <li
        className=""
      >
        <a
          href="category/test/page/6"
          onClick={[Function]}
        >
          6
        </a>
      </li>
      <li
        className=""
      >
        <a
          href="category/test/page/7"
          onClick={[Function]}
        >
          7
        </a>
      </li>
      <li
        className=""
      >
        <a
          href="category/test/page/8"
          onClick={[Function]}
        >
          8
        </a>
      </li>
      <li
        className=""
      >
        <a
          href="category/test/page/9"
          onClick={[Function]}
        >
          9
        </a>
      </li>
      <li
        className=""
      >
        <a
          href="category/test/page/10"
          onClick={[Function]}
        >
          10
        </a>
      </li>
    </ul>
  </div>
</section>
`;
